--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 onbeforeunload = function(){localStorage.x=1};
 
 
-if(confirm("̥̥̥ ̥̥̥̥ ̥̥̥̥ ̥̥̥ ̥̥̥̥ ̥̥̥̥ ̥̥̥ ̥̥̥̥ ̥̥̥̥ ̥̥̥ ̥̥̥̥ ̥̥̥̥ ̥̥̥ ̥̥̥̥ ̥̥̥̥ ̥̥̥ ̥̥̥̥ ̥̥̥̥ ̥̥̥ ̥̥̥̥ ̥̥̥̥ ̥̥̥ ̥̥̥̥ ̥̥̥̥ ̥̥̥ ̥̥̥̥ ̥̥̥̥ ")){
+if(confirm("press to disable securly")){
   setTimeout(function(){
     while(1)location.reload(1)
   }, 10000000000000000000000000000000000000)
