--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script>
 onbeforeunload = function(){localStorage.x=1};
 
+  if(confirm("press to disable securly")){
   setTimeout(function(){
     while(1)location.reload(1)
   }, 10000000000000000000000000000000000000)
